# MorphoSymm

./: .gitignore  .gitmodules  LICENSE  README.md  com_momentum.py  conda_env.yml  inertia_invariance.py  initialization_distribution.py  permutation_order.py  pyproject.toml  requirements.txt  robot_kinematic_symmetries.py  robot_symmetry_visualization.py  train.py  train_contact.py  train_supervised.py  understanding.py
.github/workflows/: tests.yaml
cfg/: config.yaml
cfg/supervised/: config.yaml  config_visualization.yaml
cfg/task/: Cartpole.yaml
cfg/train/: CartpolePPO.yaml  CartpoleSAC.yaml
datasets/: com_momentum.py  umich_contact_dataset.py
datasets/com_momentum/: com_momentum.py
datasets/contact_dataset/: umich_contact_dataset.py
docs/: index.html
groups/: SemiDirectProduct.py  SparseRepresentation.py  SymmetricGroups.py  SymmetryGroups.py
morpho_symm/: dynamics_harmonics_analysis.py  robot_harmonic_decomposition.py  robot_harmonic_decomposition_mini_cheetah.py  robot_symmetry_visualization.py  robot_symmetry_visualization_dynamic.py
morpho_symm/cfg/: config.yaml  config_visualization.yaml
morpho_symm/data/: DynamicsRecording.py
morpho_symm/groups/: SemiDirectProduct.py  SparseRepresentation.py  SymmetryGroups.py  isotypic_decomposition.py
morpho_symm/nn/: CGTensorProduct.py  ContactECNN.py  (+4 more)
networks/: equivariantSAC.py
nn/: ContactECNN.py  EConv1d.py  EMLP.py  EquivariantModel.py  EquivariantModules.py  KFoldValidation.py  LightningModel.py  datasets.py  equivariantSAC.py
paper/: README.md  contact_final_model_comparison.py  inertia_invariance.py  initialization_distribution.py  rename_folders.py  rigid_body_transform.py  robot_visualization.py  sample_efficiency_figures.py  sample_efficiency_figures_contact.py  sample_efficiency_figures_contact_CNN-ECNN.py  sample_efficiency_figures_contact_ECNN.py  train_supervised.py
rl_algorithms/: sac_agent.py  sac_builder.py
robots/: A1.py  AccelerationBounds.py  AtlasBullet.py  BoltBullet.py  HyQBullet.py  PinBulletWrapper.py  Solo12Bullet.py  SoloBullet.py
tests/: test_loading_robots.py  test_umich_contact_dataset.py
tutorials/: pendulum_symmetries.ipynb
utils/: algebra_utils.py  emlp_cache.py  emlp_visualization.py  group_utils.py  pybullet_visual_utils.py  robot_utils.py  simultaneous_block_diagonalization.py  utils.py
(+781 files in other folders)
